--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,7 +23,7 @@ apps:
     - x11
 
 parts:
-  ghidra-dcl:
+  ghidra:
     plugin: dump
     #source: http://192.168.1.195/ghidra_10.2.3_PUBLIC_20230208.zip   #save banddwith for local testing
     source: https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.2.3_build/ghidra_10.2.3_PUBLIC_20230208.zip
@@ -37,4 +37,7 @@ plugs:
     interface: personal-files
     write:
     - $HOME/.ghidra
+  dot-cache:
+    interface: personal-files
+    write:
     - $HOME/.cache/JNA
