--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: ghidra
+name: ghidra-sre
 version: 10.2.3
 summary: Ghidra SRE tools
 description: 'A software reverse engineering (SRE) suite of tools developed by NSA''s
@@ -10,7 +10,7 @@ confinement: strict
 grade: devel
 
 apps:
-  ghidra:
+  ghidra-sre:
     command: ghidra_10.2.3_PUBLIC/ghidraRun
     environment:
       JAVA_HOME: $SNAP/usr/lib/jvm/java-17-openjdk-amd64
@@ -23,7 +23,7 @@ apps:
     - x11
 
 parts:
-  ghidra:
+  ghidra-sre:
     plugin: dump
     #source: http://192.168.1.195/ghidra_10.2.3_PUBLIC_20230208.zip   #save banddwith for local testing
     source: https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.2.3_build/ghidra_10.2.3_PUBLIC_20230208.zip
@@ -40,4 +40,4 @@ plugs:
   dot-cache:
     interface: personal-files
     write:
-    - $HOME/.cache/JNA
+    - $HOME/.cache
