--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: ghidra-sre
+name: ghidra
 version: 10.2.3
 summary: Ghidra SRE tools
 description: 'A software reverse engineering (SRE) suite of tools developed by NSA''s
@@ -7,10 +7,13 @@ description: 'A software reverse engineering (SRE) suite of tools developed by N
 
 base: core20
 confinement: strict
-grade: devel
+grade: stable
+
+architectures:
+  - amd64
 
 apps:
-  ghidra-sre:
+  ghidra:
     command: ghidra_10.2.3_PUBLIC/ghidraRun
     environment:
       JAVA_HOME: $SNAP/usr/lib/jvm/java-17-openjdk-amd64
@@ -23,13 +26,15 @@ apps:
     - x11
 
 parts:
-  ghidra-sre:
+  ghidra:
     plugin: dump
     #source: http://192.168.1.195/ghidra_10.2.3_PUBLIC_20230208.zip   #save banddwith for local testing
     source: https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.2.3_build/ghidra_10.2.3_PUBLIC_20230208.zip
-    stage-packages:
-    - openjdk-17-jdk
+    build-packages:
     - openjdk-17-jre
+    - openjdk-17-jdk
+    - ca-certificates-java
+    - ca-certificates
 
 
 plugs:
