Something is pulling in an unused java-11 symlink
this is from before it was renamed to blocked.certs

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -39,5 +39,6 @@ parts:
     - openjdk-17-jdk
     - ca-certificates-java
     - ca-certificates
-
+    prime:
+      - -usr/lib/jvm/java-11-openjdk-amd64/lib/security/blacklisted.certs
 
