Adding desktop icon to repo
This change has been introduced because the snap store
was rejecting the snap complaining it couldn't find the
generated icon.

--- a/snap/gui/ghidra.desktop
+++ b/snap/gui/ghidra.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Name=Ghidra
 Exec=ghidra
-Icon=${SNAP}/ghidra_10.3_PUBLIC/support/ghidra.png
+Icon=${SNAP}/meta/gui/ghidra.png
 Type=Application
