--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,8 +11,10 @@ grade: stable
 license: Apache-2.0
 
 architectures:
-  - amd64
-  - arm64
+  - build-on: [amd64]
+    build-for: [amd64]
+  - build-on: [arm64]
+    build-for: [arm64]
 
 apps:
   ghidra:
